--- a/src/sass/pages/_restaurant-page.scss
+++ b/src/sass/pages/_restaurant-page.scss
@@ -63,7 +63,7 @@
 
         &__icon--empty {
             position: absolute;
-            right: 3rem;
+            right: 1.5rem;
             padding-top: 1.5rem;
             font-size: 1.5rem;
             &:hover {
@@ -73,7 +73,7 @@
 
         &__icon--fill {
             position: absolute;
-            right: 3rem;
+            right: 1.5rem;
             padding-top: 1.5rem;
             font-size: 1.5rem;
             opacity: 0;  
